# lfspkg

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.ac  lfspkg.cpp  lfspkgs.cpp
.github/workflows/: ci.yml
include/lfspkg/: config.hpp  db.hpp  elf.hpp  package.hpp  util.hpp
po/: Makefile.am  Makefile.in  Makevars  POTFILES.in  zh_CN.po
src/: Makefile.am  Makefile.in  cli.cpp  cli.hpp  config.cpp  db.cpp  elf.cpp  main.cpp  package.cpp  util.cpp
tests/: Makefile.in
